<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/menu_list"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_dashboard"
            android:icon="@drawable/ic_menu_camera"
            android:title="@string/menu_dashboard"
            android:visible="true" />
        <item
            android:id="@+id/nav_ta_portal"
            android:icon="@drawable/ic_menu_gallery"
            android:title="@string/menu_ta_portal"
            android:visible="false" />
        <item
            android:id="@+id/nav_event"
            android:icon="@drawable/ic_menu_slideshow"
            android:title="@string/menu_events"
            android:visible="true" />

        <item
            android:id="@+id/nav_availability_calendar"
            android:icon="@drawable/icon_ava"
            android:title="@string/Availability"
            android:visible="false" />

        <item
            android:id="@+id/nav_availability_calendar_prof"
            android:icon="@drawable/icon_ava"
            android:title="@string/Availability"
            android:visible="false" />

        <item
            android:id="@+id/nav_assignment"
            android:icon="@drawable/ic_menu_assignments"
            android:title="@string/menu_assignments"
            android:visible="false" />

        <item
            android:id="@+id/nav_professor_portal"
            android:icon="@drawable/professor_portal_icon"
            android:title="@string/professor_portal"
            android:visible="false" />

        <item
            android:id="@+id/nav_assignment_review"
            android:icon="@drawable/ic_menu_assignments_review"
            android:title="@string/menu_assignments_review"
            android:visible="false" />
        <item
            android:id="@+id/nav_content"
            android:icon="@drawable/ic_menu_content"
            android:title="@string/menu_content"
            android:visible="false" />

        <item
            android:id="@+id/nav_jobListing"
            android:icon="@drawable/ic_menu_content"
            android:title="Job Portal"
            android:visible="false" />

        <item
            android:id="@+id/nav_discussion"
            android:icon="@drawable/ic_menu_discussions"
            android:title="Discussion Forum" />
        <item
            android:id="@+id/nav_feedback_form"
            android:icon="@drawable/ic_menu_assignments"
            android:title="Feedback Form"
            android:visible="true" />
        <item
            android:id="@+id/nav_admin_portal"
            android:icon="@drawable/ic_admin_portal"
            android:title="@string/admin_portal"
            android:visible="false" />

        <item
            android:id="@+id/nav_rating"
            android:icon="@drawable/icon_rating"
            android:title="Rating"
            android:visible="true" />
        <item
            android:id="@+id/nav_rating_admin"
            android:icon="@drawable/icon_rating"
            android:title="Rating"
            android:visible="false" />

        <item
            android:id="@+id/logout"
            android:icon="@drawable/logout_icon"
            android:title="Logout"
            android:visible="true" />
    </group>
</menu>