<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="30dp"
    tools:context=".ui.assignments_review.add_assignment.AddAssignmentFragment">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="20dp"
        android:text="@string/assignment_details"
        android:textColor="@color/black"
        android:textSize="17sp"
        android:textStyle="bold" />

    <EditText
        android:id="@+id/textAssignmentName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="15dp"
        android:autofillHints="assignment name"
        android:ems="10"
        android:hint="@string/name"
        android:inputType="text" />

    <EditText
        android:id="@+id/textDescription"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="15dp"
        android:autofillHints="description"
        android:ems="10"
        android:hint="@string/description"
        android:inputType="text" />

    <EditText
        android:id="@+id/textStudentId"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="15dp"
        android:cursorVisible="false"
        android:drawableEnd="@drawable/ic_drop"
        android:ems="10"
        android:focusable="false"
        android:hint="@string/studentid_s"
        android:inputType="text" />

    <EditText
        android:id="@+id/assignmentDate"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="15dp"
        android:cursorVisible="false"
        android:ems="10"
        android:focusable="false"
        android:inputType="date" />

    <EditText
        android:id="@+id/assignmentTime"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="30dp"
        android:cursorVisible="false"
        android:ems="10"
        android:focusable="false"
        android:inputType="time" />

    <Button
        android:id="@+id/addAssignmentBtn"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:text="Submit" />

</LinearLayout>